# TTHSDNext

./: .gitignore  Cargo.toml  README-ANDROID-CN.md  README-ANDROID-EN.md  README-ANDROID.md  README.md  TTHSDInterface_TS.7z  build-all-android.sh  build-android.bat  build-android.sh  build-harmonyos.bat  build-harmonyos.sh  setup-android.sh
.github/workflows/: build_and_test.yml
HarmonyOS/: README-HARMONYOS.md  quick-start.md
bindings/c/: README.md  TTHSDownloader.hpp  tthsd.h
bindings/c/example/: CMakeLists.txt  main.cpp
bindings/csharp/: TTHSDownloader.cs
bindings/csharp/example/: Program.cs  TthsdExample.csproj
bindings/godot/: CMakeLists.txt  README.md
bindings/godot/project/addons/tthsd/: tthsd.gdextension
bindings/godot/project/examples/: download_example.gd
bindings/godot/src/: register_types.cpp  tthsd_api.h  tthsd_downloader.cpp  tthsd_downloader.h
bindings/java/: README.md  build.gradle.kts  problem.txt  settings.gradle.kts
bindings/java/src/main/kotlin/com/tthsd/: NativeLibraryLoader.kt  TTHSDLibraryJNA.kt  TTHSDownloader.kt  TTHSDownloaderAndroid.kt
bindings/nodejs/: README.md  package.json  tsconfig.json
bindings/nodejs/src/: downloader.ts  index.ts  native.ts  types.ts
bindings/rust/: Cargo.toml  README.md
bindings/rust/examples/: basic_download.rs
bindings/rust/src/: downloader.rs  event.rs  ffi.rs  lib.rs
githubReadme/: README.md
scripts/: TTHSD_interface.py  test_progress_events.py
src/core/: downloader.rs  http_downloader.rs
