[package]
name = "tthsd"
version = "0.1.0-dev.2"
edition = "2024"

[lib]
name = "tthsd"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
num_cpus = "1.16"
tokio-util = "0.7"
futures = "0.3.32"
once_cell = "1.21.3"
jni = { version = "0.21", optional = true }
lazy_static = "1.5.0"

[features]
default = []
android = ["jni"]
