[package]
name = "tthsd"
version = "0.5.1"
edition = "2021"
description = "TTHSD high-speed downloader - safe Rust bindings via dynamic library loading"
license = "LGPL-3.0"
repository = "https://github.com/your-org/TTHSD"

[dependencies]
# 动态库加载（运行时 dlopen / LoadLibrary）
libloading = "0.8"
# JSON 反序列化：将 C 回调的 JSON 转为 Rust 类型
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 异步运行时（提供 mpsc channel 事件流）
tokio = { version = "1", features = ["sync"] }
# UUID 生成（自动为任务分配 ID）
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
